--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -7,17 +7,16 @@ AM_CFLAGS = $(DEPS_CFLAGS) $(CHECK_CFLAGS)
 
 endif
 
-persdatadir = $(datadir)/persistence/test-data
-persdata_DATA = data/attachToExistingCache.tar.gz data/rct_compare.tar.gz
+localstate_DATA = data/rct_compare.tar.gz
 
 # Add config file to distribution 
-EXTRA_DIST = $(persdata_DATA) 
+EXTRA_DIST = $(localstate_DATA) 
 
 noinst_PROGRAMS = test_pco_key_value_store persistence_common_object_test
 #persistence_sqlite_experimental
  
 test_pco_key_value_store_SOURCES = test_pco_key_value_store.c
-test_pco_key_value_store_CFLAGS = $(AM_CFLAGS) $(ARCHIVELIB_CFLAGS) $(ZLIB_CFLAGS) -DPERS_TEST_DATA_DIR='"$(persdatadir)"'
+test_pco_key_value_store_CFLAGS = $(AM_CFLAGS) $(ARCHIVELIB_CFLAGS) $(ZLIB_CFLAGS)
 test_pco_key_value_store_LDADD = $(DLT_LIBS) $(SQLITE_LIBS) $(DEPS_LIBS) $(CHECK_LIBS) $(ARCHIVELIB_LIBS) $(ZLIB_LIBS) \
    $(top_srcdir)/src/libpers_common.la
 
