--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -116,6 +116,7 @@ endif
 
 # Export interface description of org.genivi.persistence.admin DBus interface
 dbusinterfaces_DATA = ../dbus_specifications/org.genivi.persistence.admin.xml
+dbuspolicy_DATA = ../dbus_config/org.genivi.persistence.admin.conf
 
 EXTRA_DIST = $(dbuspolicy_DATA) \
              $(dbusinterfaces_DATA) 
