Install D-Bus policy file in /usr/share/dbus-1/system.d
Instead of /etc/dbus-1/system.d. Package supplied policy configuration
in /etc/dbus-1/system.d is officially deprecated in D-Bus since 1.13.10 and
is reserved for system administrators wanting to override default behavior.
/usr/share/dbus-1/system.d has been preferred since D-Bus 1.10.0 (released
~4 years ago). See the following commit in D-Bus for deprecation notice:

https://gitlab.freedesktop.org/dbus/dbus/commit/dee0f551112349da4aa3f913f92f2c7c8f48f1f0

Signed-off-by: Martin Ejdestig <mejdestig@luxoft.com>

--- a/configure.ac
+++ b/configure.ac
@@ -247,7 +247,7 @@ dnl *************************************
 AC_ARG_WITH([dbuspolicydir],
         AS_HELP_STRING([--with-dbuspolicydirdir=DIR], [Directory for D-Bus system policy files]),
         [],
-        [with_dbuspolicydir=$(pkg-config --silence-errors --variable=sysconfdir dbus-1)/dbus-1/system.d])
+        [with_dbuspolicydir=$(pkg-config --silence-errors --variable=datadir dbus-1)/dbus-1/system.d])
 AC_SUBST([dbuspolicydir], [$with_dbuspolicydir])
 
 # Derive path for storing 'dbus' interface files (e. g. /usr/share/dbus-1/interfaces)
